Add stop action

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script src="script.js" type="text/javascript" ></script>
   </head>
   <body class="color">
-    <button id="change" onclick="launch();">Start/Stop</button>
+    <button id="change" onclick="startOrStop();">Start/Stop</button>
   </body>
 </html>
